// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly invalid row and column input 1`] = `
<div>
  <div
    class="tool-panel"
  >
    <label
      class="controls accordion"
    >
      <input
        checked=""
        class="accordion-switcher"
        type="checkbox"
      />
      <p
        class="caption"
      >
        Array Dimension
        <span
          class="value"
        >
          0 X 0
        </span>
      </p>
      <div
        class="tool-panel-body"
      >
        <div
          class="control"
        >
          <div
            class="text-center header"
          >
            Cols.
          </div>
          <div>
            mock-unit-input id:
            columns
            min:
            1
            defaultValue:
            1
            <input
              class="unit-input"
            />
          </div>
        </div>
        <div
          class="control"
        >
          <div
            class="text-center header"
          >
            Rows
          </div>
          <div>
            mock-unit-input id:
            rows
            min:
            1
            defaultValue:
            1
            <input
              class="unit-input"
            />
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`should render correctly valid input 1`] = `
<div>
  <div
    class="tool-panel"
  >
    <label
      class="controls accordion"
    >
      <input
        checked=""
        class="accordion-switcher"
        type="checkbox"
      />
      <p
        class="caption"
      >
        Array Dimension
        <span
          class="value"
        >
          2 X 3
        </span>
      </p>
      <div
        class="tool-panel-body"
      >
        <div
          class="control"
        >
          <div
            class="text-center header"
          >
            Cols.
          </div>
          <div>
            mock-unit-input id:
            columns
            min:
            1
            defaultValue:
            3
            <input
              class="unit-input"
            />
          </div>
        </div>
        <div
          class="control"
        >
          <div
            class="text-center header"
          >
            Rows
          </div>
          <div>
            mock-unit-input id:
            rows
            min:
            1
            defaultValue:
            2
            <input
              class="unit-input"
            />
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`should render correctly valid input 2`] = `
<div>
  <div
    class="tool-panel"
  >
    <label
      class="controls accordion"
    >
      <input
        checked=""
        class="accordion-switcher"
        type="checkbox"
      />
      <p
        class="caption"
      >
        Array Dimension
        <span
          class="value"
        >
          2 X 3
        </span>
      </p>
      <div
        class="tool-panel-body collapsed"
      >
        <div
          class="control"
        >
          <div
            class="text-center header"
          >
            Cols.
          </div>
          <div>
            mock-unit-input id:
            columns
            min:
            1
            defaultValue:
            3
            <input
              class="unit-input"
            />
          </div>
        </div>
        <div
          class="control"
        >
          <div
            class="text-center header"
          >
            Rows
          </div>
          <div>
            mock-unit-input id:
            rows
            min:
            1
            defaultValue:
            2
            <input
              class="unit-input"
            />
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`should render correctly valid input 3`] = `
<div>
  <div
    class="tool-panel"
  >
    <label
      class="controls accordion"
    >
      <input
        checked=""
        class="accordion-switcher"
        type="checkbox"
      />
      <p
        class="caption"
      >
        Array Dimension
        <span
          class="value"
        >
          3 X 2
        </span>
      </p>
      <div
        class="tool-panel-body collapsed"
      >
        <div
          class="control"
        >
          <div
            class="text-center header"
          >
            Cols.
          </div>
          <div>
            mock-unit-input id:
            columns
            min:
            1
            defaultValue:
            2
            <input
              class="unit-input"
            />
          </div>
        </div>
        <div
          class="control"
        >
          <div
            class="text-center header"
          >
            Rows
          </div>
          <div>
            mock-unit-input id:
            rows
            min:
            1
            defaultValue:
            3
            <input
              class="unit-input"
            />
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`should render correctly valid input 4`] = `
<div>
  <div
    class="tool-panel"
  >
    <label
      class="controls accordion"
    >
      <input
        checked=""
        class="accordion-switcher"
        type="checkbox"
      />
      <p
        class="caption"
      >
        Array Dimension
        <span
          class="value"
        >
          3 X 4
        </span>
      </p>
      <div
        class="tool-panel-body collapsed"
      >
        <div
          class="control"
        >
          <div
            class="text-center header"
          >
            Cols.
          </div>
          <div>
            mock-unit-input id:
            columns
            min:
            1
            defaultValue:
            4
            <input
              class="unit-input"
            />
          </div>
        </div>
        <div
          class="control"
        >
          <div
            class="text-center header"
          >
            Rows
          </div>
          <div>
            mock-unit-input id:
            rows
            min:
            1
            defaultValue:
            3
            <input
              class="unit-input"
            />
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`should render correctly valid input 5`] = `
<div>
  <div
    class="tool-panel"
  >
    <label
      class="controls accordion"
    >
      <input
        checked=""
        class="accordion-switcher"
        type="checkbox"
      />
      <p
        class="caption"
      >
        Array Dimension
        <span
          class="value"
        >
          5 X 4
        </span>
      </p>
      <div
        class="tool-panel-body collapsed"
      >
        <div
          class="control"
        >
          <div
            class="text-center header"
          >
            Cols.
          </div>
          <div>
            mock-unit-input id:
            columns
            min:
            1
            defaultValue:
            4
            <input
              class="unit-input"
            />
          </div>
        </div>
        <div
          class="control"
        >
          <div
            class="text-center header"
          >
            Rows
          </div>
          <div>
            mock-unit-input id:
            rows
            min:
            1
            defaultValue:
            5
            <input
              class="unit-input"
            />
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;
